Trying some Arrow processing methods in Java.