@@ -13,6 +13,9 @@ repositories {
 dependencies {
     implementation 'org.apache.parquet:parquet-common:1.13.1'
     implementation 'org.roaringbitmap:RoaringBitmap:1.0.0'
+    implementation 'org.apache.arrow:arrow-vector:13.0.0'
+    implementation 'org.apache.arrow:arrow-memory-unsafe:13.0.0'
+    implementation 'org.apache.arrow:arrow-compression:13.0.0'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -38,12 +41,12 @@ jmhRunBytecodeGenerator {
 
 jmh {
     zip64 = true
-    includes = ["VectorIntCrossLaneAggregations"]
+    includes = ["FilterAndAggregate.*"]
     //profilers = ['xperfasm']
     benchmarkMode = ['avgt']
     timeUnit = 'us'
     //jvmArgs = ['--add-modules jdk.incubator.vector -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly']
-    jvmArgs = ['--add-modules jdk.incubator.vector']
+    jvmArgs = ['--add-modules jdk.incubator.vector', "--add-opens=java.base/java.nio=ALL-UNNAMED"]
     timeOnIteration = '1s'
     warmup = '1s'
     fork = 1
